게시판 수정 필요

--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
 <header class="top-bar">
   <div class="top-bar__in flex">
     <div class="w-0 flex-1 flex items-center pl-6">
-      <a href="/">
-        <img src="/PETMILY_LOGO.png" alt="PETMILY">
+      <a href="home.html">
+        <img src="main_images/PETMILY_LOGO.png" alt="PETMILY">
       </a>
     </div>
 
@@ -57,7 +57,7 @@
       </div>
 
       <div class="profile flex gap-1">
-        <a href="#"><img src="/profile.png" alt="PROFILE"></a>
+        <a href="#"><img src="main_images/profile.png" alt="PROFILE"></a>
       </div>
     </div>
   </div>
@@ -66,9 +66,9 @@
 <body>
     <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="true" space-between="30"
     centered-slides="true" autoplay-delay="7000" autoplay-disable-on-interaction="false">
-    <swiper-slide><img src="/slide_1.jpg" alt="image_01"></swiper-slide>
-    <swiper-slide><img src="/slide_2.jpg" alt="image_02"></swiper-slide>
-    <swiper-slide><img src="/slide_3.jpg" alt="image_03"></swiper-slide>
+    <swiper-slide><img src="main_images/slide_1.jpg" alt="image_01"></swiper-slide>
+    <swiper-slide><img src="main_images/slide_2.jpg" alt="image_02"></swiper-slide>
+    <swiper-slide><img src="main_images/slide_3.jpg" alt="image_03"></swiper-slide>
     <div class="autoplay-progress" slot="container-end">
       <svg viewBox="0 0 48 48">
         <circle cx="24" cy="24" r="20"></circle>
