--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>펫밀리</title>
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/login.css">
 </head>
 
 <script src="https://cdn.tailwindcss.com"></script>
