--- a/board.html
+++ b/board.html
@@ -174,6 +174,15 @@
     <div class="btns">
         <button class="paging-btn"><</button>
         <button class="paging-btn">1</button>
+        <button class="paging-btn">2</button>
+        <button class="paging-btn">3</button>
+        <button class="paging-btn">4</button>
+        <button class="paging-btn">5</button>
+        <button class="paging-btn">6</button>
+        <button class="paging-btn">7</button>
+        <button class="paging-btn">8</button>
+        <button class="paging-btn">9</button>
+        <button class="paging-btn">10</button>
         <button class="paging-btn">></button>
     </div>
 </div>
