--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
         <a href="#">스토어</a>
       </li>
       <li>
-        <a href="#">맵</a>
+        <a href="map.html">맵</a>
         <ul>
           <li><a href="#"><span>병원</span></a></li>
           <li><a href="#"><span>호텔</span></a></li>
