--- a/map.html
+++ b/map.html
@@ -63,6 +63,24 @@
   </div>
 </header>
 
+<section>
+    <div class="board-top-bar">
+        <div class="board-top-bar-title">
+            지 도
+        </div>
+        
+        <div class="frame">
+            <button class="my-custom-btn my-btn-5"><span><a href="">병 원</a></span></button>
+            <button class="my-custom-btn my-btn-5"><span><a href="">호 텔</a></span></button>
+            <button class="my-custom-btn my-btn-5"><span><a href="">숙 소</a></span></button>
+        </div>
+        
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+        </svg>
+    </div>
+</section>
+
 <body>
 	<div id="map" class="map"></div>
 
