board에 작성 버튼 추가해야함 / write, info, map 등 수정 필요 / login 폼에 소셜 로그인 이미지 추가

--- a/OneDrive/바탕 화면/웹/board.html
+++ b/OneDrive/바탕 화면/웹/board.html
@@ -102,25 +102,25 @@
         <div class="th-hit">조회수</div>
     </div>
     <div class="table-body">
-        <div class="td-num">10</div>
-        <div class="td-title"><a href="">안녕하세요</a></div>
-        <div class="td-writer">나는나는나는</div>
-        <div class="td-date">09-12</div>
-        <div class="td-hit">35161</div>
+        <div class="td-num">1</div>
+        <div class="td-title"><a href="">[공지] 커뮤니티 공간 이용 안내</a></div>
+        <div class="td-writer">펫밀리</div>
+        <div class="td-date">01-21</div>
+        <div class="td-hit">351621</div>
     </div>
     <div class="table-body">
-        <div class="td-num">9</div>
-        <div class="td-title"><a href="">안녕하세요</a></div>
-        <div class="td-writer">나는나는나는</div>
-        <div class="td-date">09-12</div>
-        <div class="td-hit">35161</div>
+        <div class="td-num">4521</div>
+        <div class="td-title"><a href="">[공지] 8월 커뮤니티 이용 제한 조치 안내</a></div>
+        <div class="td-writer">펫밀리</div>
+        <div class="td-date">09-01</div>
+        <div class="td-hit">9461</div>
     </div>
     <div class="table-body">
-        <div class="td-num">8</div>
-        <div class="td-title"><a href="">안녕하세요</a></div>
-        <div class="td-writer">나는나는나는</div>
-        <div class="td-date">09-12</div>
-        <div class="td-hit">35161</div>
+        <div class="td-num">4155</div>
+        <div class="td-title"><a href="">[이벤트] (종료) 지금 참여하면 경품 당첨 확률 UP ❤️</a></div>
+        <div class="td-writer">펫밀리</div>
+        <div class="td-date">09-01</div>
+        <div class="td-hit">15170</div>
     </div>
     <div class="table-body">
         <div class="td-num">7</div>
@@ -132,7 +132,7 @@
     <div class="table-body">
         <div class="td-num">6</div>
         <div class="td-title"><a href="">안녕하세요</a></div>
-        <div class="td-writer">나는나는나는</div>
+        <div class="td-writer">여덟글자여덟글자</div>
         <div class="td-date">09-12</div>
         <div class="td-hit">35161</div>
     </div>
