--- a/OneDrive/바탕 화면/웹/login.html
+++ b/OneDrive/바탕 화면/웹/login.html
@@ -91,9 +91,9 @@
               <label for="tab-1">소셜 서비스로 로그인</label>
           </div>
           <div class="social-container">
-              <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-              <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#" class="social-kakao"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-naver"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#" class="social-google"><i class="fab fa-google-plus-g"></i></a>
 
           </div>
       </div>
